--- a/CSS/about.css
+++ b/CSS/about.css
@@ -18,7 +18,7 @@ body.night-mode {
 
 body {
     background-color: var(--background-color);
-    transition: background-color 0.3s ease;
+
     /* Smooth transition for the background color */
 }
 
@@ -65,6 +65,17 @@ body {
     animation: typing 3s steps(10) infinite;
 }
 
+.about-me, .footer-icons, .footer-text{
+    opacity: 0; 
+    transform: translateY(20px);
+    transition: opacity 2s ease-in-out, transform 2s ease-in-out; /* Slower transition */
+}
+
+/* State after scrolling into view remains the same */
+.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
 
 
 
